<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hex Wallpaper</string>
    <string name="colour">Colour group</string>
    <string name="tile_size">Tile size</string>
    <string name="speed">Colour change speed</string>
    <string name="example">Preview</string>

    <string name="colour_default">BLUE</string>
    <string name="speed_default">SLOW</string>
    <string name="size_default">LARGE</string>

    <string name="blue">Ocean</string>
    <string name="green">Nature</string>
    <string name="grey">Grey</string>
    <string name="red">Sunset</string>
    <string name="purple">Royalty</string>
    <string name="nexus">Nexus</string>
    <string name="pink">Pink</string>
    <string name="pastel">Pastel</string>
    <string name="retro">Retro</string>
    <string name="gold">Gold</string>
    <string name="dark">Stormy</string>
    <string name="lgbt">LGBT Pride</string>
    <string name="pansex">Pansexual</string>
    <string name="asex">Asexual</string>
    <string name="bisex">Bisexual</string>
    <string name="trans">Trans</string>
    <string name="nonbinary">Non-\u200bBinary</string>

    <string name="slow">Slow</string>
    <string name="normal">Normal</string>
    <string name="fast">Fast</string>

    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="advanced_speed">Speed</string>
    <string name="advanced_size">Size</string>

    <string name="install">Install</string>
    <string name="show_hide_app_icon">Show/Hide App Icon</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="accessibility_advanced_settings">Advanced settings</string>

</resources>
