<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.moorhenapps.bluehex.wallpaper.HexView
        android:id="@+id/hex_example"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/set_wallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/button"
        android:visibility="gone"
        android:elevation="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/set_wallpaper"
        app:layout_constraintRight_toRightOf="@id/hex_example"
        app:layout_constraintTop_toTopOf="@id/hex_example" />

    <FrameLayout
        android:background="@drawable/switch_gradient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/hex_example"
        app:layout_constraintRight_toRightOf="@id/hex_example">

        <Switch
            android:id="@+id/show_app_icon"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/settings_horz_padding"
            android:paddingRight="@dimen/settings_horz_padding"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:switchPadding="8dp"
            android:text="@string/show_hide_app_icon" />
    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/buttons"
        android:background="@color/settings_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/settings_horz_padding"
        android:paddingRight="@dimen/settings_horz_padding"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hex_example">

        <com.moorhenapps.bluehex.views.SmartToggleButton
            android:id="@+id/speed_slow"
            style="@style/ToggleBarButton"
            android:tag="SLOW"
            android:text="@string/slow"
            app:group="SPEED"
            app:layout_constraintEnd_toStartOf="@id/speed_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.moorhenapps.bluehex.views.SmartToggleButton
            android:id="@+id/speed_medium"
            style="@style/ToggleBarButton"
            android:tag="MEDIUM"
            android:text="@string/medium"
            app:group="SPEED"
            app:layout_constraintEnd_toStartOf="@id/speed_fast"
            app:layout_constraintStart_toEndOf="@id/speed_slow"
            app:layout_constraintTop_toTopOf="@id/speed_slow" />

        <com.moorhenapps.bluehex.views.SmartToggleButton
            android:id="@+id/speed_fast"
            style="@style/ToggleBarButton"
            android:tag="FAST"
            android:text="@string/fast"
            app:group="SPEED"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/speed_medium"
            app:layout_constraintTop_toTopOf="@id/speed_slow" />


        <com.moorhenapps.bluehex.views.SmartToggleButton
            android:id="@+id/size_small"
            style="@style/ToggleBarButton"
            android:layout_marginTop="16dp"
            android:tag="SMALL"
            android:text="@string/small"
            app:group="SIZE"
            app:layout_constraintEnd_toStartOf="@id/size_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speed_slow" />

        <com.moorhenapps.bluehex.views.SmartToggleButton
            android:id="@+id/size_medium"
            style="@style/ToggleBarButton"
            android:tag="MEDIUM"
            android:text="@string/medium"
            app:group="SIZE"
            app:layout_constraintEnd_toStartOf="@id/size_large"
            app:layout_constraintStart_toEndOf="@id/size_small"
            app:layout_constraintTop_toTopOf="@id/size_small" />

        <com.moorhenapps.bluehex.views.SmartToggleButton
            android:id="@+id/size_large"
            style="@style/ToggleBarButton"
            android:tag="LARGE"
            android:text="@string/large"
            app:group="SIZE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/size_medium"
            app:layout_constraintTop_toTopOf="@id/size_small" />


        <com.moorhenapps.bluehex.views.SmartTogglePaletteButton
            android:id="@+id/colour_blue"
            style="@style/PaletteButton"
            android:layout_marginTop="16dp"
            android:tag="BLUE"
            app:layout_constraintEnd_toStartOf="@id/colour_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_small" />

        <com.moorhenapps.bluehex.views.SmartTogglePaletteButton
            android:id="@+id/colour_green"
            style="@style/PaletteButton"
            android:tag="GREEN"
            app:layout_constraintEnd_toStartOf="@id/colour_red"
            app:layout_constraintStart_toEndOf="@+id/colour_blue"
            app:layout_constraintTop_toTopOf="@+id/colour_blue" />

        <com.moorhenapps.bluehex.views.SmartTogglePaletteButton
            android:id="@+id/colour_red"
            style="@style/PaletteButton"
            android:tag="RED"
            app:layout_constraintEnd_toStartOf="@id/colour_grey"
            app:layout_constraintStart_toEndOf="@+id/colour_green"
            app:layout_constraintTop_toTopOf="@+id/colour_blue" />

        <com.moorhenapps.bluehex.views.SmartTogglePaletteButton
            android:id="@+id/colour_grey"
            style="@style/PaletteButton"
            android:tag="GREY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/colour_red"
            app:layout_constraintTop_toTopOf="@+id/colour_blue" />


        <com.moorhenapps.bluehex.views.SmartTogglePaletteButton
            android:id="@+id/colour_purple"
            style="@style/PaletteButton"
            android:layout_marginTop="16dp"
            android:tag="PURPLE"
            app:layout_constraintEnd_toStartOf="@id/colour_rainbow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colour_blue" />

        <com.moorhenapps.bluehex.views.SmartTogglePaletteButton
            android:id="@+id/colour_rainbow"
            style="@style/PaletteButton"
            android:tag="RAINBOW"
            app:layout_constraintEnd_toStartOf="@id/colour_pink"
            app:layout_constraintStart_toEndOf="@+id/colour_purple"
            app:layout_constraintTop_toTopOf="@+id/colour_purple" />

        <com.moorhenapps.bluehex.views.SmartTogglePaletteButton
            android:id="@+id/colour_pink"
            style="@style/PaletteButton"
            android:tag="PINK"
            app:layout_constraintEnd_toStartOf="@id/colour_pastel"
            app:layout_constraintStart_toEndOf="@+id/colour_rainbow"
            app:layout_constraintTop_toTopOf="@+id/colour_purple" />

        <com.moorhenapps.bluehex.views.SmartTogglePaletteButton
            android:id="@+id/colour_pastel"
            style="@style/PaletteButton"
            android:tag="PASTEL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/colour_pink"
            app:layout_constraintTop_toTopOf="@+id/colour_purple" />


        <com.moorhenapps.bluehex.views.SmartTogglePaletteButton
            android:id="@+id/colour_gold"
            style="@style/PaletteButton"
            android:layout_marginTop="16dp"
            android:tag="GOLD"
            app:layout_constraintEnd_toStartOf="@id/colour_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colour_purple" />

        <com.moorhenapps.bluehex.views.SmartTogglePaletteButton
            android:id="@+id/colour_dark"
            style="@style/PaletteButton"
            android:tag="DARK"
            app:layout_constraintEnd_toStartOf="@id/colour_retro"
            app:layout_constraintStart_toEndOf="@+id/colour_gold"
            app:layout_constraintTop_toTopOf="@+id/colour_gold" />

        <com.moorhenapps.bluehex.views.SmartTogglePaletteButton
            android:id="@+id/colour_retro"
            style="@style/PaletteButton"
            android:tag="RETRO"
            app:layout_constraintEnd_toStartOf="@id/colour_nexus"
            app:layout_constraintStart_toEndOf="@+id/colour_dark"
            app:layout_constraintTop_toTopOf="@+id/colour_gold" />

        <com.moorhenapps.bluehex.views.SmartTogglePaletteButton
            android:id="@+id/colour_nexus"
            style="@style/PaletteButton"
            android:tag="NEXUS"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/colour_retro"
            app:layout_constraintTop_toTopOf="@+id/colour_gold" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>